# kayo

./: .dockerignore  Dockerfile  README.md
kayo-player/: index.html  package.json
kayo-player/public/: index.html  manifest.json
kayo-player/src/: App.css  App.tsx
kayo-player/src/component/: CastControl.tsx  MediaChooser.tsx  index.ts
kayo-player/src/context/: CastContext.ts  CastProvider.tsx  index.ts
kayo-server/: Cargo.toml  README.md
kayo-server/src/: main.rs  ser_xml.rs
kayo-server/src/api/: error.rs  mod.rs  request.rs  response.rs
