[package]
name = "kayo-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
aws-sdk-s3 = { version = "0.24.0", default-features = false }
aws-smithy-types = "0.54.4"
axum = "0.6.12"
bytes = "1.4.0"
clap = { version = "4.1.13", features = ["derive"] }
futures = { version = "0.3.27", default-features = false, features = ["std"] }
serde = "1.0.158"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["cors", "fs"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
xml-rs = "0.8.4"

[profile.release]
codegen-units = 1
lto = true
strip = true
