[package]
name = "kayo-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
aws-sdk-s3 = { version = "0.31.0", default-features = false }
aws-smithy-types = "0.56.1"
axum = "0.6.20"
bytes = "1.11.1"
clap = { version = "4.4.4", features = ["derive"] }
futures = { version = "0.3.28", default-features = false, features = ["std"] }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.38.2", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["cors", "fs"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
xml-rs = "0.8.18"

[profile.release]
codegen-units = 1
lto = true
strip = true
